--- a/style.css
+++ b/style.css
@@ -1,10 +1,38 @@
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-html, body{
+html,
+body {
   width: 100%;
   height: 100%;
+}
+
+header {
+  background-image: url('./images/bgimg.jpeg');
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.custom-navbar {
+  max-width: 1320px;
+  height: 70px;
+  margin: 0 auto;
+}
+.navbar-brand {
+  display: flex;
+  align-items: center;
+}
+.navbar-brand img {
+  height: 40px;
+  margin-right: 10px;
+}
+.nav-link {
+  font-weight: 500;
+  color: #fff;
+  font-size: 18px;
 }
