--- a/style.css
+++ b/style.css
@@ -23,15 +23,18 @@ header {
   height: 70px;
   margin: 0 auto;
 }
+
 .navbar-brand {
   display: flex;
   align-items: center;
 }
+
 .navbar-brand img {
   width: 50px;
   height: 40px;
   margin-right: 10px;
 }
+
 .nav-link {
   font-weight: 500;
   color: #fff;
@@ -56,23 +59,29 @@ header {
 .event-section h2 {
   font-weight: 700;
   letter-spacing: 1px;
+  color: #fff;
 }
+
 .event-row {
   padding: 30px 0;
   border-bottom: 1px solid rgba(255,255,255,0.1);
 }
+
 .event-row:last-child {
   border-bottom: none;
 }
-.event-title a {
+
+.event-title p {
   color: #fff;
-  font-size: 1.1rem;
-  font-weight: 600;
-  text-decoration: none;
+  font-weight: 500;
+  font-size: 24px;
+  width: 320px;
 }
-.event-title a:hover {
-  text-decoration: underline;
+
+#underline{
+text-decoration: underline;
 }
+
 .event-date .display-4 {
   font-size: 3rem;
   line-height: 1;
@@ -80,4 +89,38 @@ header {
   color: #fff;
   font-size: 80px;
   font-weight: 600;
+}
+
+.small{
+  color: #fff;
+  font-size: 18px;
+  font-weight: 400;
+}
+
+.event-date small{
+  color: #fff;
+}
+
+.time-add{
+  color: #fff;
+}
+
+/* conference */
+
+#eventimg1{
+  width: 10%;
+}
+
+#eventimg2{
+  width: 10%;
+}
+
+#eventimg3{
+  width: 10%;
+}
+
+.future-main-content{
+  display: flex;
+  /* justify-content: center;
+  align-items: center; */
 }
