--- a/style.css
+++ b/style.css
@@ -345,3 +345,19 @@ text-decoration: underline;
   display: inline-block;
   margin-right: 8px;  
 }
+
+
+/* footer section */
+.brand-logo {
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 1rem;
+}
+
+.section-heading {
+  font-size: 18px;
+  margin-bottom: 1rem;
+}
+.custom-hr {
+  border-color: rgba(0,0,0,0.1);
+}
