--- a/style.css
+++ b/style.css
@@ -93,11 +93,12 @@ header {
   padding: 0.5rem 1.25rem;
   outline;: :none;
   border: none;
+  text-transfrom: uppercase;
 }
 
 .event-section h2 {
-  font-weight: 700;
-  letter-spacing: 1px;
+  font-weight: 600;
+  font-size: 50px;
   color: #fff;
 }
 
@@ -142,6 +143,11 @@ text-decoration: underline;
 
 .time-add{
   color: #fff;
+}
+
+.future{
+  padding-top: 150px;
+  padding-bottom: 150px;
 }
 
 /* about section */
