--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&display=swap');
+
 * {
   margin: 0;
   padding: 0;
@@ -8,6 +10,7 @@ html,
 body {
   width: 100%;
   height: 100%;
+  font-family: "Bricolage Grotesque", sans-serif;
 }
 
 header {
@@ -360,6 +363,16 @@ text-decoration: underline;
   flex-wrap: wrap;                  
   gap: 20px;                        
   padding: 40px 0;                 
+}
+
+.blog-brod{
+  padding-top: 150px;
+  padding-bottom: 150px;
+}
+
+.container h1{
+  font-size: 50px;
+  font-weight: 600;
 }
 
 /* each blog box fixed size */
