--- a/style.css
+++ b/style.css
@@ -399,6 +399,10 @@ text-decoration: underline;
   color: #fff;            
 }
 
+#special-border{
+  text-decoration: underline; 
+}
+
 /* meta row */
 .blog-meta {
   display: flex;
