--- a/style.css
+++ b/style.css
@@ -169,8 +169,8 @@ text-decoration: underline;
 }
 
 .cta {
-  font-weight: bold;
-  font-size: 1.2rem;
+  font-weight: 600;
+  font-size: 24px;
   margin-top: 2rem;
 }
 
@@ -202,6 +202,23 @@ text-decoration: underline;
   width: 225px;
   height: 380px;
   object-fit: cover;
+}
+
+.about-para{
+  font-size: 14px;
+  font-weight: 400;
+}
+
+.strong-text{
+  font-size: 19px;
+  font-weight: 400;
+}
+
+.about-param{
+  font-size: 16px;
+  font-weight: 400;
+  color: #D4D4D4;
+  margin-left: 2.2rem;
 }
 
 /* brand box */
@@ -330,12 +347,6 @@ text-decoration: underline;
   padding-left: 0;
   text-align: left;
 }
-
-/* .pricing-features li::before {
-  content: "✔";
-  margin-right: 10px;
-  color: #000;
-} */
 
 /* Left text higher */
 .left-content h2 {
