faq bg image added

--- a/style.css
+++ b/style.css
@@ -246,6 +246,12 @@ text-decoration: underline;
 
 /* faq and pricing section */
 
+#faqandpricing {
+  background: 
+    linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.9)),
+    url('./images/faqandpricing.png') center / cover no-repeat;
+}
+
 .faq-section {
   min-height: 100vh;
   width: 1400px;
@@ -585,7 +591,8 @@ text-decoration: underline;
 }
 
 .fas img{
-  margin-left: 4px;
-  margin-top: 4px;
+  margin-left: 6px;
+  margin-top: 5px;
+  height: 28px;
 }
 
