--- a/style.css
+++ b/style.css
@@ -27,16 +27,18 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100%;
+  height: 30rem; 
 }
 
 #speaker img {
-  width: 832px;
-  height: 100%; 
+  width: 42%;             
+  max-width: 100%;         
   transform: rotateY(180deg);
-  object-fit: contain; 
-  max-height: 100vh; 
+  object-fit: contain;
+  object-position: center;
+  height: 52rem;
 }
+
 
 .custom-navbar {
   max-width: 1320px;
@@ -61,12 +63,14 @@ header {
   font-size: 18px;
 }
 
+
 /* slider text */
 
 .text-slide-section {
   background-color: #7546FF;
   overflow-x: auto;
   height: 95px;
+  overflow-x: hidden;
 }
 
 .slide-text {
@@ -99,6 +103,8 @@ header {
   -webkit-text-stroke: 1px white; /* White border */
   text-stroke: 1px white; /* Fallback for other browsers */
 }
+
+/* slider end here */
 
 
 /* future event */
@@ -607,20 +613,21 @@ text-decoration: underline;
 
 /* arrow sign style */
 .fas {
-  position: fixed; 
+  position: fixed;
   width: 2.5rem;
   height: 2.5rem;
   background: #fff;
-  bottom: 3.7rem;
-  right: 2.5rem;
+  bottom: 2.5rem;
+  right: -60px;
   display: flex;
   justify-content: center;
   align-items: center;
   color: #000;
   border-radius: 50%;
   z-index: 999;
-  box-shadow: 0 0 8px rgba(0, 0, 0, 0.2); /* optional for visibility */
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.2); 
   cursor: pointer;
+  position: absolute;
 }
 
 .fas img {
@@ -628,3 +635,6 @@ text-decoration: underline;
   margin-top: 5px;
   height: 28px;
 }
+
+
+/* footer end here */
