--- a/style.css
+++ b/style.css
@@ -14,30 +14,64 @@ body {
 }
 
 header {
-  background-image: url('./images/bgimg.jpeg');
+  background-image: linear-gradient(
+    to right,
+    rgba(0, 0, 0, 0.9) 0%,
+    rgba(0, 0, 0, 0.8) 30%,
+    rgba(0, 0, 0, 0.7) 60%,
+    rgba(0, 0, 0, 0.5) 80%,
+    rgba(0, 0, 0, 0.3) 100%
+  ),
+  url('./images/bgimg.jpeg');
   width: 100%;
-  height: 100vh; /* Full screen height */
+  height: 100vh; 
   background-size: cover;
+  background-position: top center;
   background-repeat: no-repeat;
   position: relative;
   overflow: hidden;
 }
 
-/* #speaker {
+.vertical-social {
+  position: absolute;
+  top: -118px;
+  right: 30px;
+  
+  width: 1080px;
+  height: 60px;
+
+  transform: rotate(-90deg) translateY(-50%);
+  transform-origin: right top;
+
+  background: linear-gradient(to right, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), 
+              url('./images/sidecontent.jpeg');
+
+  background-repeat: no-repeat;
+  /* background-size: cover; */
+
   display: flex;
-  justify-content: center;
   align-items: center;
-  height: 30rem; 
+  justify-content: center;
+  gap: 10px;
+
+  font-size: 18px;
+  color: #fff;
 }
 
-#speaker img {
-  width: 42%;             
-  max-width: 100%;         
-  transform: rotateY(180deg);
-  object-fit: contain;
-  object-position: center;
-  height: 52rem;
-} */
+/* Brighten the text color and enhance separator pipe */
+.vertical-social .pipe {
+  color: #fff ;
+}
+
+.vertical-social .pipe::after {
+  content: "";
+  display: inline-block;
+  width: 1px;
+  height: 60px; 
+  background-color: #7546FF;
+  margin-left: 10px;
+  vertical-align: middle;
+}
 
 .speaker-section {
   display: flex;
@@ -50,30 +84,32 @@ header {
 /* Image wrapper */
 .speaker-wrapper {
   position: relative;
-  display: inline-block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
-  max-width: 100%;
-  height: 40rem; 
+  height: 100vh; 
 }
 
 /* Image styling */
 .speaker-wrapper img {
-  margin: 0 auto;
-  display: block;
-  width: 50%;             
-  max-width: 100%;         
-  transform: rotateY(180deg);
-  object-fit: contain;
+  height: 100vh;        
+  width: auto;           
+  object-fit: cover;   
   object-position: center;
-  height: 36rem;
+  transform: rotateY(180deg);
+  display: block;
+  margin-bottom: 22rem;
+  filter: saturate(2.8);
 }
+
 
 /* Text Overlay on left */
 .text-overlay {
   position: absolute;
   top: 10%;
   left: 0;
-  padding-left: 15px; /* Container gutter */
+  padding-left: 15px; 
   max-width: 500px;
   color: #fff;
 }
@@ -86,6 +122,7 @@ header {
 .upper-text p {
   margin: 0;
   font-size: 16px;
+  font-weight: 400;
 }
 
 .upper-text h2 {
@@ -105,9 +142,9 @@ header {
 /* Right side button */
 .btn-floating-right {
   position: absolute;
-  bottom: 35%;
+  bottom: 38%;
   right: 0;
-  padding-right: 15px; /* Container gutter */
+  padding-right: 15px; 
 }
 
 .btn-floating-right button {
@@ -118,8 +155,6 @@ header {
   font-size: 16px;
   cursor: pointer;
 }
-
-
 
 .custom-navbar {
   max-width: 1320px;
@@ -143,6 +178,9 @@ header {
   color: #fff;
   font-size: 18px;
 }
+
+
+/* header end here */
 
 
 /* slider text */
@@ -181,8 +219,8 @@ header {
 
 .nextgen {
   color: transparent;
-  -webkit-text-stroke: 1px white; /* White border */
-  text-stroke: 1px white; /* Fallback for other browsers */
+  -webkit-text-stroke: 1px white; 
+  text-stroke: 1px white; 
 }
 
 /* slider end here */
@@ -257,6 +295,9 @@ text-decoration: underline;
   padding-bottom: 150px;
 }
 
+/* future event end*/
+
+
 /* about section */
 .section-title {
   font-size: 2.5rem;
@@ -325,6 +366,9 @@ text-decoration: underline;
   margin-left: 2.2rem;
 }
 
+/* about end here */
+
+
 /* brand box */
 
 .box{
@@ -346,6 +390,8 @@ text-decoration: underline;
   padding-top: 150px;
   padding-bottom: 150px;
 }
+
+/* brand box end */
 
 
 /* faq and pricing section */
@@ -471,6 +517,8 @@ text-decoration: underline;
   font-weight: 400;
 }
 
+/* faq and pricing end here */
+
 
 /* blog post */
 
@@ -549,6 +597,10 @@ text-decoration: underline;
   margin-right: 8px;  
 }
 
+/* blog post end here */
+
+
+
 /* footer section */
 
 .footer {
@@ -558,7 +610,6 @@ text-decoration: underline;
   background: linear-gradient(to right, #1e1b47 0%, #0a0a0a 40%, #000 100%);
   overflow: hidden;
 }
-
 
 .footer .bg-left {
   background: url('./images/footerimg.jpeg') no-repeat center center;
@@ -573,7 +624,6 @@ text-decoration: underline;
   mix-blend-mode: hard-light;
   z-index: 0;
 }
-
 
 .footer .footer-content {
   position: relative;
