--- a/style.css
+++ b/style.css
@@ -14,19 +14,20 @@ body {
 }
 
 header {
-  background-image: linear-gradient(
-    to right,
-    rgba(0, 0, 0, 0.9) 0%,
-    rgba(0, 0, 0, 0.8) 30%,
-    rgba(0, 0, 0, 0.7) 60%,
-    rgba(0, 0, 0, 0.5) 80%,
-    rgba(0, 0, 0, 0.3) 100%
-  ),
-  url('./images/bgimg.jpeg');
+  background-image:
+    linear-gradient(
+      to right,
+      #000 0%,
+      #000 20%,
+      rgba(0, 0, 0, 0.8) 40%,
+      rgba(0, 0, 0, 0.4) 60%,
+      rgba(0, 0, 0, 0) 100%
+    ),
+    url('./images/bgimg.jpeg');
   width: 100%;
-  height: 100vh; 
+  height: 100vh;
   background-size: cover;
-  background-position: top center;
+  background-position: 50% 30%;
   background-repeat: no-repeat;
   position: relative;
   overflow: hidden;
@@ -47,7 +48,6 @@ header {
               url('./images/sidecontent.jpeg');
 
   background-repeat: no-repeat;
-  /* background-size: cover; */
 
   display: flex;
   align-items: center;
@@ -63,8 +63,7 @@ header {
   color: #fff ;
 }
 
-.vertical-social .pipe::after {
-  content: "";
+.vertical-social .content-bar {
   display: inline-block;
   width: 1px;
   height: 60px; 
@@ -88,7 +87,7 @@ header {
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 100vh; 
+  height: 100vh;
 }
 
 /* Image styling */
@@ -101,8 +100,8 @@ header {
   display: block;
   margin-bottom: 22rem;
   filter: saturate(2.8);
+  
 }
-
 
 /* Text Overlay on left */
 .text-overlay {
@@ -197,12 +196,6 @@ header {
   font-weight: 600;
   position: relative;
   white-space: nowrap;
-}
-
-.invisible-text {
-  margin-left: 1.6rem;
-  visibility: hidden;
-  display: inline-block;
 }
 
 .visible-text {
@@ -634,6 +627,11 @@ text-decoration: underline;
   font-size: 24px;
   font-weight: bold;
   color: #fff;
+}
+
+.footer-logo img{
+  width: 50px;
+  height: 40px;
 }
 
 .footer a {
